--- a/voyelle.html
+++ b/voyelle.html
@@ -1,119 +1,122 @@
 <html>
-	<head>
-		<title></title>
-		<meta content="">
-		<style></style>
-	</head>
-	<body>
-		<table>
-			<tr>
-				<td>
-					<audio id="a" src="sounds/Open_front_unrounded_vowel.ogg"></audio>
-					<div>
-						<button onclick="document.getElementById('a').play()">[a]</button>
-					</div>
-				</td>
-				<td>patte, papa, lac, cave, agate, il plongea</td>
-			</tr>
-			<tr>
-				<td>[ɑ]</td>
-				<td>
-					<audio controls>
-						<source src="sounds/Open_back_unrounded_vowel.ogg">
-		      			</audio>
-				</td>
-				<td>pâte, tas, vase, bâton, âme</td>
-			</tr>
-			<tr>
-				<td>[ə]</td>
-				<td>
-					<audio controls>
-						<source src="sounds/Schwa.ogg">
-		      			</audio>
-				</td>
-				<td>je, me, fenêtre</td>
-			</tr>
-			<tr>
-				<td>[ø]</td>
-				<td>
-					<audio controls>
-						<source src="sounds/Close-mid_front_rounded_vowel.ogg">
-		      			</audio>
-				</td>
-				<td>jeu, feu</td>
-			</tr>
-			<tr>
-				<td>[œ]</td>
-				<td>
-					<audio controls>
-						<source src="sounds/Open-mid_front_rounded_vowel.ogg">
-		      			</audio>
-				</td>
-				<td>fleur</td>
-			</tr>
-			<tr>
-				<td>[e]</td>
-				<td>
-					<audio controls>
-						<source src="sounds/Close-mid_front_unrounded_vowel.ogg">
-		      			</audio>
-				</td>
-				<td>été, nez</td>
-			</tr>
-			<tr>
-				<td>[ɛ]</td>
-				<td>
-					<audio controls>
-						<source src="sounds/Open-mid_front_unrounded_vowel.ogg">
-		      			</audio>
-				</td>
-				<td>mer, j’aimais</td>
-			</tr>
-			<tr>
-				<td>[o]</td>
-				<td>
-					<audio controls>
-						<source src="sounds/Close-mid_back_rounded_vowel.ogg">
-		      			</audio>
-				</td>
-				<td>sot, seau, sceau, saut</td>
-			</tr>
-			<tr>
-				<td>[ɔ]</td>
-				<td>
-					<audio controls>
-						<source src="sounds/Open-mid_back_rounded_vowel.ogg">
-		      			</audio>
-				</td>
-				<td>porte, port, or, mort</td>
-			</tr>
-			<tr>
-				<td>[i]</td>
-				<td>
-					<audio controls>
-						<source src="sounds/Close_front_unrounded_vowel.ogg">
-		      			</audio>
-				</td>
-				<td>fille, ami</td>
-			</tr>
-			<tr>
-				<td>[u]</td>
-				<td>
-					<audio controls>
-						<source src="sounds/Close_back_rounded_vowel.ogg">
-		      			</audio>
-				</td>
-				<td>coup, août</td>
-			</tr>
-			<tr>
-				<td>[y]</td>
-				<td>
-					<audio controls>
-						<source src="sounds/Close_front_rounded_vowel.ogg">
-		      			</audio>
-				</td>
-				<td>nu, j’ai eu</td>
-			</tr>
-		</table>
-	</body>
+  <head>
+    <title></title>
+    <meta content="" />
+    <style></style>
+  </head>
+  <body>
+    <table>
+      <tr>
+        <td>
+          <audio id="a" src="sounds/Open_front_unrounded_vowel.ogg"></audio>
+          <div>
+            <button onclick="document.getElementById('a').play()">[a]</button>
+          </div>
+        </td>
+        <td>patte, papa, lac, cave, agate, il plongea</td>
+      </tr>
+      <tr>
+        <td>
+          <audio id="ɑ" src="sounds/Open_back_unrounded_vowel.ogg"></audio>
+          <div>
+            <button onclick="document.getElementById('ɑ').play()">[ɑ]</button>
+          </div>
+        </td>
+        <td>pâte, tas, vase, bâton, âme</td>
+      </tr>
+      <tr>
+        <td>
+          <audio id="ə" src="sounds/Schwa.ogg"></audio>
+          <div>
+            <button onclick="document.getElementById('ə').play()">[ə]</button>
+          </div>
+        </td>
+        <td>je, me, fenêtre</td>
+      </tr>
+      <tr>
+        <td>
+          <audio id="ø" src="sounds/Close-mid_front_rounded_vowel.ogg"></audio>
+          <div>
+            <button onclick="document.getElementById('ø').play()">[ø]</button>
+          </div>
+        </td>
+        <td>jeu, feu</td>
+      </tr>
+      <tr>
+        <td>
+          <audio id="œ" src="sounds/Open-mid_front_rounded_vowel.ogg"></audio>
+          <div>
+            <button onclick="document.getElementById('œ').play()">[œ]</button>
+          </div>
+        </td>
+        <td>fleur</td>
+      </tr>
+      <tr>
+        <td>
+          <audio
+            id="e"
+            src="sounds/Close-mid_front_unrounded_vowel.ogg"
+          ></audio>
+          <div>
+            <button onclick="document.getElementById('e').play()">[e]</button>
+          </div>
+        </td>
+        <td>été, nez</td>
+      </tr>
+      <tr>
+        <td>
+          <audio id="ɛ" src="sounds/Open-mid_front_unrounded_vowel.ogg"></audio>
+          <div>
+            <button onclick="document.getElementById('ɛ').play()">[ɛ]</button>
+          </div>
+        </td>
+        <td>mer, j’aimais</td>
+      </tr>
+      <tr>
+        <td>
+          <audio id="o" src="sounds/Close-mid_back_rounded_vowel.ogg"></audio>
+          <div>
+            <button onclick="document.getElementById('o').play()">[o]</button>
+          </div>
+        </td>
+        <td>sot, seau, sceau, saut</td>
+      </tr>
+      <tr>
+        <td>
+          <audio id="ɔ" src="sounds/Open-mid_back_rounded_vowel.ogg"></audio>
+          <div>
+            <button onclick="document.getElementById('ɔ').play()">[ɔ]</button>
+          </div>
+        </td>
+        <td>porte, port, or, mort</td>
+      </tr>
+      <tr>
+        <td>
+          <audio id="i" src="sounds/Close_front_unrounded_vowel.ogg"></audio>
+          <div>
+            <button onclick="document.getElementById('i').play()">[i]</button>
+          </div>
+        </td>
+        <td>fille, ami</td>
+      </tr>
+      <tr>
+        <td>
+          <audio id="u" src="sounds/Close_back_rounded_vowel.ogg"></audio>
+          <div>
+            <button onclick="document.getElementById('u').play()">[u]</button>
+          </div>
+        </td>
+        <td>coup, août</td>
+      </tr>
+      <tr>
+        <td>
+          <audio id="y" src="sounds/Close_front_rounded_vowel.ogg"></audio>
+          <div>
+            <button onclick="document.getElementById('y').play()">[y]</button>
+          </div>
+        </td>
+        <td>nu, j’ai eu</td>
+      </tr>
+    </table>
+  </body>
 </html>
